controller des pages créé

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Accueil</h1>
+
+<%= link_to('À propos', '/a-propos')%>
+
+<%= link_to('Membres', '/nos-membres')%>
+
+<%= link_to('Mentions légales', '/mentions-legales')%>
+
+<%= link_to('Membres', '/nos-membres') %>
