--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -1,3 +1,28 @@
+<header>
+  <nav class="navbar navbar-static-top">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+					<span class="barre_nav1">
+						<li> <a href="magazines.html"> LES MAGAZINES</a></li>
+						<li> <a href="series.html">LES SERIES</a></li>
+						<li> <a href="actualites.html">ACTUALITES</a></li>
+					</span>
+        <li>
+          <a href="index.html" class="index-lien"><img src="images/KD.png" alt="Logo-menu-kippon-Dream" ></a>
+        </li>
+					<span class="barre_nav2">
+					<li> <a href="membres.html">MEMBRES</a></li>
+					<li> <a href="contact.html">CONTACT</a></li>
+					<li> <a href="recrutement.html">RECRUTEMENT</a></li>
+					</span>
+      </ul>
+    </div>
+  </nav>
+  <div class="header-bloc">
+    <p>Vous l'avez voulu, le Kippon Dream l'a fait ! Découvrez chacun des membres de l'équipe avec ses quelques mots accompagnés d'un dessin autoportrait !</p>
+  </div>
+</header>
+
 <section id="staff">
   <div class="container-fluid">
 
