--- a/app/views/pages/magazines.html.erb
+++ b/app/views/pages/magazines.html.erb
@@ -89,8 +89,7 @@
           <div class="mangadraft">
             <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/1200-numero-hors-serie-dream-cup-1-28-aout-2015'%>
           </div>
-
-          <p>Pour le premier numéro hors-série du webzine, découvrez le concours de la Dream Cup ! Vous pourrez voter parmi 5 one-shot réalisés par des auteurs qui ne sont pas du Kippon Dream !</p>
+              <p>Pour le premier numéro hors-série du webzine, découvrez le concours de la Dream Cup ! Vous pourrez voter parmi 5 one-shot réalisés par des auteurs qui ne sont pas du Kippon Dream !</p>
 
           <p>Au sommaire : <br />
             -Âmes jumelles <br />
@@ -122,7 +121,7 @@
           </div>
 
           <div class="mangadraft">
-            <a href="https://www.mangadraft.com/lecture/74-kippon-dream/116-numero-1-reedition-27-juin-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+            <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/116-numero-1-reedition-27-juin-2014' %>
           </div>
 
           <p>Réédition du numéro 1 le 27 juin 2014 par Iyoku.</p>
@@ -159,7 +158,7 @@
           </div>
 
           <div class="mangadraft">
-            <a href="https://www.mangadraft.com/lecture/74-kippon-dream/100-numero-2-mars-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+            <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/100-numero-2-mars-2014' %>
           </div>
 
           <p>Pour ce deuxième numéro, retrouvez les séries: <br />
@@ -195,8 +194,7 @@
           </div>
 
           <div class="mangadraft">
-            <a href="https://www.mangadraft.com/lecture/74-kippon-dream/101-numero-3-15-juin-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
-
+            <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/101-numero-3-15-juin-2014' %>
           </div>
 
           <p>Et voici le troisième numéro du Kippon Dream !</p>
@@ -231,7 +229,7 @@
           </div>
 
           <div class="mangadraft">
-            <a href="https://www.mangadraft.com/lecture/74-kippon-dream/133-numero-4-31-juillet-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+            <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/133-numero-4-31-juillet-2014' %>
           </div>
 
           <p>Pour ce quatrième numéro, découvrez la suite des séries: <br />
@@ -267,7 +265,7 @@
           </div>
 
           <div class="mangadraft">
-            <a href="https://www.mangadraft.com/lecture/74-kippon-dream/179-numero-5-15-septembre-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+            <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/179-numero-5-15-septembre-2014' %>
           </div>
 
           <p>Dans ce conquième numéro, venez découvrir la suite des séries: <br />
@@ -304,7 +302,7 @@
           </div>
           <div class="row">
             <div class="mangadraft">
-              <a href="https://www.mangadraft.com/lecture/74-kippon-dream/271-numero-6-31-octobre-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+              <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/271-numero-6-31-octobre-2014' %>
               <%= image_tag('pair', alt: 'pair')%>
             </div>
           </div>
@@ -357,7 +355,7 @@
             </div>
 
             <div class="mangadraft">
-              <a href="https://www.mangadraft.com/lecture/74-kippon-dream/303-numero-7-20-decembre-2014" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+              <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/303-numero-7-20-decembre-2014' %>
               <%= image_tag('impair.png', alt: 'impair')%>
             </div>
 
@@ -404,7 +402,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/385-numero-8-14-fevrier-2015" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/385-numero-8-14-fevrier-2015' %>
                 <%= image_tag('pair', alt: 'pair')%>
               </div>
 
@@ -451,7 +449,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/474-numero-9-31-mars-2015" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/474-numero-9-31-mars-2015' %>
                 <%= image_tag('impair.png', alt: 'impair')%>
               </div>
 
@@ -489,7 +487,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/748-numero-10-23-juin-2015" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/748-numero-10-23-juin-2015' %>
                 <%= image_tag('pair', alt: 'pair')%>
               </div>
 
@@ -522,7 +520,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/890-numero-11-20-juillet-2015" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/890-numero-11-20-juillet-2015' %>
                 <%= image_tag('impair.png', alt: 'impair')%>
               </div>
 
@@ -557,7 +555,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/1680-numero-12-15-janvier-2016" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/1680-numero-12-15-janvier-2016' %>
                 <%= image_tag('pair', alt: 'pair')%>
               </div>
 
@@ -606,7 +604,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/1919-numero-13-29-fevrier-2016" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/1919-numero-13-29-fevrier-2016' %>
                 <%= image_tag('impair.png', alt: 'impair')%>
               </div>
 
@@ -655,7 +653,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/2205-numero-14-15-avril-2016" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/2205-numero-14-15-avril-2016' %>
                 <%= image_tag('pair', alt: 'pair')%>
               </div>
 
@@ -689,7 +687,7 @@
               </div>
 
               <div class="mangadraft">
-                <a href="https://www.mangadraft.com/lecture/74-kippon-dream/2420-numero-15-30-mai-2016" ><img src="images/btl_lecture_mangadraft.png" alt="mangadraft" /></a>
+                <%= link_to image_tag('btl_lecture_mangadraft.png'), 'https://www.mangadraft.com/lecture/74-kippon-dream/2420-numero-15-30-mai-2016' %>
                 <%= image_tag('impair.png', alt: 'impair')%>
               </div>
 
@@ -705,4 +703,6 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
       </div> <!-- cadre -->
+    </div>
+  </div>
 </section>
