--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="page-membres">
   <nav class="navbar navbar-static-top">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
