--- a/app/views/pages/magazines.html.erb
+++ b/app/views/pages/magazines.html.erb
@@ -22,7 +22,7 @@
   <h1>Les magazines</h1>
   <p class="lecture_libre">en lecture libre sur mangadraft</p>
 
-  <p>Du contenu exclusif et plus de 2000 pages du Kippon Dream vous addendent ! <br />
+  <p>Du contenu exclusif et plus de 2000 pages du Kippon Dream vous attendent ! <br />
     Ici vous trouvez l'ensemble de nos numéros en lecture libre ! <br />
     Vous découvrirez dans ces derniers l'ensemble de nos projets bd/manga, quelques <br />
     articles et des interviews des membres de l'équipe (ainsi que des guests parfois!). </p>
@@ -174,9 +174,9 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
-    <!--
+    <!---------------------------
     NUMERO 3
-    -->
+   ---------------------------->
 
     <div class="row">
       <div class="col-md-12 col-sm-12 numero-div">
@@ -209,9 +209,9 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
-    <!--
+    <!----------------------------
     NUMERO 4
-    -->
+    ----------------------------->
 
     <div class="row">
       <div class="col-md-12 numero-div">
@@ -245,9 +245,9 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
-    <!--
+    <!---------------------------------
     NUMERO 5
-    -->
+   ----------------------------------->
 
     <div class="row">
       <div class="col-md-12 numero-div">
@@ -279,9 +279,9 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
-    <!--
+    <!------------------------------------
     NUMERO 6
-    -->
+    ------------------------------------->
 
     <div class="row">
       <div class="col-md-12 numero-div">
@@ -335,9 +335,9 @@
         </div> <!-- col md 12 -->
       </div> <!-- row -->
 
-      <!--
+      <!-------------------------------------
       NUMERO 7
-      -->
+      -------------------------------------->
 
       <div class="row">
         <div class="col-md-12 numero-div">
@@ -382,9 +382,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!-----------------------------------
         NUMERO 8
-        -->
+        ------------------------------------>
 
         <div class="row">
           <div class="col-md-12 numero-div">
@@ -429,9 +429,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!---------------------------------------
         NUMERO 9
-        -->
+        ---------------------------------------->
 
         <div class="row">
           <div class="col-md-12 numero-div">
@@ -466,9 +466,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!----------------------------------------
         NUMERO 10
-        -->
+        ----------------------------------------->
 
 
         <div class="row">
@@ -500,9 +500,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!----------------------------------------
         NUMERO 11
-        -->
+        ----------------------------------------->
 
         <div class="row">
           <div class="col-md-12 numero-div">
@@ -535,9 +535,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!----------------------------------
         NUMERO 12
-        -->
+        ----------------------------------->
 
         <div class="row">
           <div class="col-md-12 numero-div">
@@ -585,9 +585,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!---------------------------------------
         NUMERO 13
-        -->
+        ---------------------------------------->
 
         <div class="row">
           <div class="col-md-12 numero-div">
@@ -633,9 +633,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!----------------------------------------
         NUMERO 14
-        -->
+        ----------------------------------------->
 
         <div class="row">
           <div class="col-md-12 numero-div">
@@ -667,9 +667,9 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
-        <!--
+        <!---------------------------------------
         NUMERO 15
-        -->
+        ---------------------------------------->
 
         <div class="row">
           <div class="col-md-12 numero-div">
