moidfié le contenu de la barre nav en enlevant "les" et remplacé recrutement par boutique

--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -3,8 +3,8 @@
     <div class="container-fluid">
       <ul class="nav navbar-nav">
 					<span class="barre_nav1">
-						<li> <a href="magazines.html"> LES MAGAZINES</a></li>
-						<li> <a href="series.html">LES SERIES</a></li>
+						<li> <a href="magazines.html">MAGAZINES</a></li>
+						<li> <a href="series.html">SERIES</a></li>
 						<li> <a href="actualites.html">ACTUALITES</a></li>
 					</span>
         <li>
@@ -13,7 +13,7 @@
 					<span class="barre_nav2">
 					<li> <a href="membres.html">MEMBRES</a></li>
 					<li> <a href="contact.html">CONTACT</a></li>
-					<li> <a href="recrutement.html">RECRUTEMENT</a></li>
+					<li> <a href="recrutement.html">BOUTIQUE/a></li>
 					</span>
       </ul>
     </div>
