--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,16 +5,16 @@
         <!-- À optimiser... -->
 						<span class="barre_nav1">
 						<li><%= link_to('Magazines', '/magazines')%></li>
-						<li> <a href="#">LES SERIES</a></li>
+						<li> <a href="#">SERIES</a></li>
 						<li> <a href="#">ACTUALITES</a></li>
 					</span>
         <li>
           <%= link_to image_tag('KD.png',:class=> 'header-logo', alt: 'Logo menu kippon Dream'), '/', :class => 'index-lien' %>
         </li>
 					<span class="barre_nav2">
-					<li> <%= link_to('LES MEMBRES', '/membres') %></li>
+					<li> <%= link_to('MEMBRES', '/membres') %></li>
 					<li> <a href="#">CONTACT</a></li>
-					<li> <a href="recrutement.html">RECRUTEMENT</a></li>
+					<li> <a href="recrutement.html">BOUTIQUE</a></li>
 					</span>
       </ul>
     </div>
