--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,19 +2,18 @@
   <nav class="navbar navbar-static-top">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <!-- À optimiser... -->
-						<span class="barre_nav1">
-						<li><%= link_to('Magazines', '/magazines')%></li>
-						<li> <a href="#">SERIES</a></li>
-						<li> <a href="#">ACTUALITES</a></li>
+					<span class="barre_nav1">
+						<li> <%= link_to('MAGAZINES', '/magazines') %></li>
+						<li> <%= link_to('SERIES', '#') %></li>
+						<li> <%= link_to('ACTUALITES', '#') %></li>
 					</span>
         <li>
           <%= link_to image_tag('KD.png',:class=> 'header-logo', alt: 'Logo menu kippon Dream'), '/', :class => 'index-lien' %>
         </li>
-					<span class="barre_nav2">
+        <span class="barre_nav2">
 					<li> <%= link_to('MEMBRES', '/membres') %></li>
-					<li> <a href="#">CONTACT</a></li>
-					<li> <a href="recrutement.html">BOUTIQUE</a></li>
+					<li> <%= link_to('CONTACT', '#') %></li>
+					<li> <%= link_to('BOUTIQUE', '#') %></li>
 					</span>
       </ul>
     </div>
