--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -68,29 +68,12 @@
     <div class="flex-japan col-md-4">
       <aside>
         <div>
-          <%= image_tag('japanexpo.png', :class => 'center-block', alt: 'Japan Expo 2016') %>
-          <p class="date_je">Du 7 au 10 juillet</p>
-          <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary btn-lg-planning" data-toggle="modal" data-target="#japanExpo">
-            Planning des auteurs
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="japanExpo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog modal-planning" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body">
-                  <%= image_tag('planning.jpg', alt: 'planning auteurs', :class => 'planning-je')%>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
+          <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
+          <div class="socialButs">
+            <a class="btn btn-primary" href="#"><i class="fa fa-twitter fa-2x"></i></a>
+            <a class="btn btn-primary" href="#"><i class="fa fa-facebook fa-2x"></i></a>
           </div>
+
         </div>
       </aside>
     </div>
