font awesome + fixes + opti

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -70,8 +70,9 @@
         <div>
           <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
           <div class="socialButs">
-            <a class="btn btn-primary" href="#"><i class="fa fa-twitter fa-2x"></i></a>
-            <a class="btn btn-primary" href="#"><i class="fa fa-facebook fa-2x"></i></a>
+            <a class="btn btn-primary" href="#"><span class="fa fa-facebook fa-2x" aria-hidden="true"></span></a>
+            <a class="btn btn-primary" href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+
           </div>
 
         </div>
