bloc réseaux sociaux terminé et dimensionné, quelques changements dans le css avec disparition de la classe flex-japan remplacée par reseaux-sociaux, ajustement de taille de la section actualités dans l'index

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -56,8 +56,6 @@
             </div>
           </div>
         </div>
-
-
       </div>
 
       <p class="col-md-2">Bienvenue sur le premier site internet du Kippon Dream ! Découvrez sur ce site toutes nos séries, magazines, mais aussi nos membres et l'actualité de notre association. Le site a été entièrement réalisé par Twildette et Kuro et est encore en construction, nous espérons toutefois que vous apprécierez la visite, n'hésitez pas à nous donner des retours ! </p>
@@ -65,7 +63,7 @@
       <p class="col-md-2">La Japan expo est arrivée... Découvrez le planning de nos auteurs et passez nous voir si le coeur vous en dit ! Vous trouverez sur notre stand notre tout premier magazine papier ainsi que divers goodies proposés par les auteurs. Nos membres ne mordent pas promis, ils apprécieront votre visite :D Sur ce, mata ne !</p>
     </article>
 
-    <div class="flex-japan col-md-4">
+    <div class="reseaux-sociaux col-md-3">
       <aside>
         <div>
           <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
