--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -243,7 +243,7 @@ article h1 {
 
 }
 
-.flex-japan {
+.reseaux-sociaux {
     display: flex;
     justify-content: center;
     align-items: center;
