--- a/app/views/pages/magazines.html.erb
+++ b/app/views/pages/magazines.html.erb
@@ -4,16 +4,16 @@
       <ul class="nav navbar-nav">
 					<span class="barre_nav1">
 						<li> <%= link_to('MAGAZINES', '/magazines') %></li>
-						<li> <%= link_to('SERIES', '#') %></li>
-						<li> <%= link_to('MAGAZINES', '#') %></li>
+						<li> <%= link_to('SERIES', '/series') %></li>
+						<li> <%= link_to('ACTUALITES', '/actu') %></li>
 					</span>
         <li>
           <%= link_to image_tag('KD.png',:class=> 'header-logo', alt: 'Logo menu kippon Dream'), '/', :class => 'index-lien' %>
         </li>
         <span class="barre_nav2">
 					<li> <%= link_to('MEMBRES', '/membres') %></li>
-					<li> <%= link_to('CONTACT', '#') %></li>
-					<li> <%= link_to('BOUTIQUE', '#') %></li>
+					<li> <%= link_to('CONTACT', '/contact') %></li>
+					<li> <%= link_to('BOUTIQUE', '/boutique') %></li>
 					</span>
       </ul>
     </div>
