ajout d'une hauteur à la section actualités de l'index dans le fichier css hd pour régler problème de mise en page, ajout d'un header en com (travail en cours) pour faire un header avec un code "plus propre"

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,6 +19,21 @@
     </div>
   </nav>
 
+  <!-- <!-- <nav class="">
+    <div>
+      <ul>
+        <li><%= link_to('MAGAZINES', '/magazines') %></li>
+        <li><%= link_to('SERIES', '/series') %></li>
+        <li><%= link_to('ACTUALITES', '/actu') %></li>
+        <li><%= link_to image_tag('KD.png',:class=> 'header-logo', alt: 'Logo menu kippon Dream'), '/', :class => 'index-lien' %></li>
+        <li><%= link_to('MEMBRES', '/membres') %></li>
+        <li><%= link_to('CONTACT', '/contact') %></li>
+        <li><li> <%= link_to('BOUTIQUE', '/boutique') %></li></li>
+      </ul>
+    </div>
+  </nav>
+  -->
+
   <h1 id="sous-titre">Le webzine de prépublication de bandes-dessinées</h1>
 
   <div class="center-block image_header">
