--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,13 @@
 
     <!-- SEO -->
     <meta name="geo.region" content="FR" />
+
     <meta name="description" content=" L'équipe du Kippon Dream vous présente le premier webzine de prépublication de manga ! Venez lire des séries francophones prometteuses ! | Kippon Dream">
     <meta name="keywords" content="assocation, bande-dessinée, prépublication, kippondream, kippon dream, manga, collectif, scan, manga francais, manga amateur, magazine">
     <meta property="og:site_name" content="Kippon Dream" />
     <meta property="og:title" content="<%= titre %>" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://www.kippondream.com/assets/background/background01.png" />
     <meta property="og:url" content="<%= request.original_url %>" />
     <meta property="og:image" content="https://www.florent-fulleringer.fr//bundles/fulleringerfront/video/FulleringerAgency.jpg" />
     <meta property="og:description" content="L'équipe du Kippon Dream vous présente le premier webzine de prépublication de manga ! Venez lire des séries francophones prometteuses !" >
