--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -46,7 +46,7 @@
 <section class="actualites">
   <div class="row">
     <article>
-      <div class="col-md-offset-1 col-md-3 voter-mag-papier">
+      <div class="col-md-offset-1 col-md-3 col-sm-12 voter-mag-papier">
 
         <h1>Actualités</h1>
         <p>Nous avons besoin de vous !</p>
@@ -73,12 +73,18 @@
         </div>
       </div>
 
-      <p class="col-md-2">Bienvenue sur le premier site internet du Kippon Dream ! Découvrez sur ce site toutes nos séries, magazines, mais aussi nos membres et l'actualité de notre association. Le site a été entièrement réalisé par Twildette et Kuro et est encore en construction, nous espérons toutefois que vous apprécierez la visite, n'hésitez pas à nous donner des retours ! </p>
+      <p class="col-md-2 col-sm-6">Bienvenue sur le premier site internet du Kippon Dream ! Découvrez sur
+        ce site toutes nos séries, magazines, mais aussi nos membres et l'actualité de notre association.
+        Le site a été entièrement réalisé par Twildette et Kuro et est encore en construction,
+        nous espérons toutefois que vous apprécierez la visite, n'hésitez pas à nous donner des retours ! </p>
 
-      <p class="col-md-2">La Japan expo est arrivée... Découvrez le planning de nos auteurs et passez nous voir si le coeur vous en dit ! Vous trouverez sur notre stand notre tout premier magazine papier ainsi que divers goodies proposés par les auteurs. Nos membres ne mordent pas promis, ils apprécieront votre visite :D Sur ce, mata ne !</p>
+      <p class="col-md-2 col-sm-6">La Japan expo est arrivée... Découvrez le planning de nos auteurs
+        et passez nous voir si le coeur vous en dit ! Vous trouverez sur notre stand notre
+        tout premier magazine papier ainsi que divers goodies proposés par les auteurs. Nos membres
+        ne mordent pas promis, ils apprécieront votre visite :D Sur ce, mata ne !</p>
     </article>
 
-    <div class="reseaux-sociaux col-md-3">
+    <div class="reseaux-sociaux col-md-3 col-offset-sm-1 col-sm-10">
       <aside>
         <div>
           <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
@@ -100,7 +106,11 @@
           <div class="col-md-12">
             <h1>A PROPOS DU PROJET, QU'EST-CE QUE LE KIPPON DREAM ?</h1>
 
-            <p>Le Kippon Dream est un webzine de prépublication francophone de bandes-dessinées et manga avec déjà plus de 15 numéros à son actif et un staff motivé et dynamique. Ce projet est en perpétuel développement et si toute l'équipe travaille de façon bénévole et par passion pour le moment, nous avons pour objectif de nous professionnaliser afin de se faire une place dans le milieu de la bd francophone.</p>
+            <p>Le Kippon Dream est un webzine de prépublication francophone de bandes-dessinées style manga
+              avec déjà plus de 15 numéros à son actif et un staff motivé et dynamique. Ce projet est
+              en perpétuel développement et si toute l'équipe travaille de façon bénévole et
+              par passion pour le moment, nous avons pour objectif de nous professionnaliser afin
+              de se faire une place dans le milieu de la bd francophone.</p>
           </div>
 
           <div class="col-md-12">
@@ -108,11 +118,15 @@
 
             <p>Du contenu exclusif et plus de 2000 pages du Kippon Dream vous attendent ! <br />
               Ici vous trouverez l'ensemble de nos numéros en lecture libre ! <br />
-              Vous découvrirez dans ces derniers l'ensemble de nos projets bd/manga, quelques articles et des interviews des membres de l'équipe (ainsi que des guests parfois!)</p>
+              Vous découvrirez dans ces derniers l'ensemble de nos projets bd/manga, quelques
+              articles et des interviews des membres de l'équipe (ainsi que des guests parfois!)</p>
 
-            <p>Il est aussi important de savoir que nos numéros sont, à partir du sixième, partagés en deux groupes, les pairs et les impairs. <br />
-              Cela nous permet de vous offrir un numéro tous les un mois et demi et d'avoir à chaque fois un contenu suffisant et mieux organisé. <br />
-              Il est à noter que chaque série reste dans son groupe, cela facilite ainsi la lecture et vous pouvez retrouver vos séries préférées selon les numéros.</p>
+            <p>Il est aussi important de savoir que nos numéros sont, à partir du sixième,
+              partagés en deux groupes, les pairs et les impairs. <br />
+              Cela nous permet de vous offrir un numéro tous les un mois et demi et d'avoir
+              à chaque fois un contenu suffisant et mieux organisé. <br />
+              Il est à noter que chaque série reste dans son groupe, cela facilite
+              ainsi la lecture et vous pouvez retrouver vos séries préférées selon les numéros.</p>
           </div>
         </div>
         <div class="col-md-4 projet_image">
