--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -135,34 +135,8 @@ footer p:nth-child(3) {
     padding-bottom: 20px;
 }
 
-.cadre {
-    width: 70%;
-    background-color: #FFFFFF;
-    border: 2px solid black;
-}
+@media (min-width: 992px) {
 
-@media (min-width: 768px) {
-    .navbar-nav {
-        float: none;
-        margin: 0;
-        margin-top: -25px;
-    }
-
-    .navbar-nav li {
-        float: none;
-    }
-
-    .index-lien {
-        padding: 0 0 15px 0 !important;
-    }
-
-    .navbar-nav li a {
-        padding: 15px 20px;
-    }
-
-    .navbar-nav > li > a {
-        padding: 15px 20px;
-    }
 }
 
 /*
@@ -196,8 +170,7 @@ header h1 {
 
 
 aside {
-    border: 5px solid white;
-    padding: 20px;
+
 }
 
 aside p {
@@ -239,15 +212,15 @@ article h1 {
 }
 
 .reseaux-sociaux {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border: 5px solid white;
+    padding: 20px;
+    margin: auto;
+    margin-top: 60px;
 }
 
 .actualites {
     background-color: #41a4d5;
     color: white;
-    height: 420px;
     padding-top: 35px;
 }
 
@@ -277,23 +250,8 @@ article h1 {
     width: 800px;
 }
 
-.modal-planning {
-    width: 70%;
-}
-
-.planning-je {
-    width: 100%;
-}
-
-.btn-lg-planning {
-    padding: 40px 30px;
-    font-size: 2.5em;
-    line-height: 1.3333333;
-    border-radius: 6px;
-}
-
 .btn-lg-voter {
-    padding: 25px 80px;
+    padding: 25px 55px;
     font-size: 2.5em;
     line-height: 1.3333333;
     border-radius: 6px;
@@ -302,20 +260,26 @@ article h1 {
 .presentation {
     background: url('background/background04.jpg') #f69c00 no-repeat;
     background-size: 100% 100%;
-    height: 800px;
+    height: 880px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .presentation p {
-    text-align: justify
+    text-align: justify;
 }
 
 .projet_image {
     position: absolute;
     bottom: -33px;
     right: 0;
+}
+
+.cadre {
+    width: 70%;
+    background-color: #FFFFFF;
+    border: 2px solid black;
 }
 
 /* membres.css */
