--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,6 @@
 <header>
-  <nav class="navbar navbar-static-top">
+  <!-- NAV ORDI -->
+  <nav class="navbar navbar-static-top navbar-sd">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
 					<span class="barre_nav1">
@@ -19,20 +20,28 @@
     </div>
   </nav>
 
-  <!-- <!-- <nav class="">
-    <div>
-      <ul>
-        <li><%= link_to('MAGAZINES', '/magazines') %></li>
-        <li><%= link_to('SERIES', '/series') %></li>
-        <li><%= link_to('ACTUALITES', '/actu') %></li>
-        <li><%= link_to image_tag('KD.png',:class=> 'header-logo', alt: 'Logo menu kippon Dream'), '/', :class => 'index-lien' %></li>
-        <li><%= link_to('MEMBRES', '/membres') %></li>
-        <li><%= link_to('CONTACT', '/contact') %></li>
-        <li><li> <%= link_to('BOUTIQUE', '/boutique') %></li></li>
-      </ul>
+  <!-- NAV TABLETTE MOBILE -->
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-sm">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="" class="navbar-brand">Kippon Dream</a> <!-- rediriger vers l'accueil -->
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li> <%= link_to('MAGAZINES', '/magazines') %></li>
+          <li> <%= link_to('SERIES', '/series') %></li>
+          <li> <%= link_to('ACTUALITES', '/actu') %></li>
+          <li> <%= link_to('MEMBRES', '/membres') %></li>
+          <li> <%= link_to('CONTACT', '/contact') %></li>
+          <li> <%= link_to('BOUTIQUE', '/boutique') %></li>
+        </ul>
+      </div>
     </div>
   </nav>
-  -->
 
   <h1 id="sous-titre">Le webzine de prépublication de bandes-dessinées</h1>
 
@@ -85,7 +94,6 @@
     </article>
 
     <div class="reseaux-sociaux col-md-3 col-offset-sm-1 col-sm-10">
-      <aside>
         <div>
           <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
           <div class="socialButs text-center">
@@ -93,9 +101,8 @@
             <a class="btn btn-primary" href="https://twitter.com/KipponDream"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
           </div>
         </div>
-      </aside>
     </div>
-  </div>
+  </div> <!-- row -->
 </section>
 
 <section class="presentation">
@@ -130,7 +137,7 @@
           </div>
         </div>
         <div class="col-md-4 projet_image">
-          <%= image_tag('personnage_pain.png', alt: 'Païn')%>
+          <%= image_tag('personnage_pain.png', alt: 'Païn', class:'hidden-sm hidden-xs')%>
         </div>
 
       </div>
