amélioration de la mise en en page tablette de l'accueil

--- a/app/assets/stylesheets/tablette.css
+++ b/app/assets/stylesheets/tablette.css
@@ -23,4 +23,12 @@ p {
     width: 85%;
 }
 
+.voter-mag-papier p {
+    text-align: center;
+}
+
+.reseaux-sociaux {
+    margin-top: 20px;
+}
+
 /* MAGS */
