--- a/app/assets/stylesheets/tablette.css
+++ b/app/assets/stylesheets/tablette.css
@@ -1,5 +1,9 @@
 /* style */
 
+header {
+    padding-top: 50px;
+}
+
 .navbar-sd {
     display: none;
 }
@@ -23,12 +27,32 @@ p {
     width: 85%;
 }
 
-.voter-mag-papier p {
-    text-align: center;
-}
-
 .reseaux-sociaux {
     margin-top: 20px;
 }
 
 /* MAGS */
+
+.derniere_sortie img {
+    width: 80%;
+}
+
+.dernier_numero {
+    text-align: center;
+}
+
+.dernier_numero h1 {
+    text-align: center;
+}
+
+.dernier_numero p {
+    margin-top: -25px;
+}
+
+.image-couv img {
+    width: 100%;
+}
+
+.magazines {
+    height: 8610px;
+}
