--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -55,8 +55,8 @@
 <section class="actualites">
   <div class="row">
     <article>
-      <div class="col-md-offset-1 col-md-3 col-sm-12 voter-mag-papier">
-        <h1 class="col-sm-offset-4 col-sm-4">Actualités</h1>
+      <div class="col-md-offset-1 col-md-4 col-sm-12 voter-mag-papier">
+        <h1 class="col-md-offset-0 col-md-12 col-sm-offset-4 col-sm-4">Actualités</h1>
         <p class="col-sm-12">Nous avons besoin de vous !</p>
         <p class="col-sm-12">Répondez à ce sondage pour élire vos séries préférés (du numéro papier)</p>
         <button type="button" class="btn btn-primary btn-lg-voter center-block" data-toggle="modal" data-target="#myModal">
@@ -81,19 +81,19 @@
         </div>
       </div>
 
-      <p class="col-md-2 col-sm-offset-1 col-sm-5">Bienvenue sur le premier site internet du Kippon Dream ! Découvrez sur
+      <p class="col-md-offset-0 col-md-3 col-sm-offset-1 col-sm-5">Bienvenue sur le premier site internet du Kippon Dream ! Découvrez sur
         ce site toutes nos séries, magazines, mais aussi nos membres et l'actualité de notre association.
         Le site a été entièrement réalisé par Twildette et Kuro et est encore en construction,
         nous espérons toutefois que vous apprécierez la visite, n'hésitez pas à nous donner des retours ! </p>
 
-      <p class="col-md-2 col-sm-5">La Japan expo est arrivée... Découvrez le planning de nos auteurs
+      <p class="col-md-3 col-sm-5">La Japan expo est arrivée... Découvrez le planning de nos auteurs
         et passez nous voir si le coeur vous en dit ! Vous trouverez sur notre stand notre
         tout premier magazine papier ainsi que divers goodies proposés par les auteurs. Nos membres
         ne mordent pas promis, ils apprécieront votre visite :D Sur ce, mata ne !</p>
     </article>
 
     <div class="row">
-    <div class="reseaux-sociaux col-md-3 col-sm-offset-1 col-sm-10">
+    <div class="reseaux-sociaux col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
       <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
       <div class="socialButs text-center">
         <a class="btn btn-primary" href="https://www.facebook.com/KipponDream/"><span class="fa fa-facebook fa-2x" aria-hidden="true"></span></a>
