--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -1,5 +1,6 @@
 <header class="page-membres">
-  <nav class="navbar navbar-static-top">
+  <!-- NAV ORDI -->
+  <nav class="navbar navbar-static-top navbar-sd">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
 					<span class="barre_nav1">
@@ -16,6 +17,29 @@
 					<li> <%= link_to('BOUTIQUE', '/boutique') %></li>
 					</span>
       </ul>
+    </div>
+  </nav>
+
+  <!-- NAV TABLETTE MOBILE -->
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-sm">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="" class="navbar-brand">Kippon Dream</a> <!-- rediriger vers l'accueil -->
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li> <%= link_to('MAGAZINES', '/magazines') %></li>
+        <li> <%= link_to('SERIES', '/series') %></li>
+        <li> <%= link_to('ACTUALITES', '/actu') %></li>
+        <li> <%= link_to('MEMBRES', '/membres') %></li>
+        <li> <%= link_to('CONTACT', '/contact') %></li>
+        <li> <%= link_to('BOUTIQUE', '/boutique') %></li>
+      </ul>
+    </div>
     </div>
   </nav>
   <div class="header-bloc">
